[package]
name = "error49"
version = "1.0.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
http-body-util = "0.1.0-rc.2"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }

[dependencies.tokio]
version = "1.28.0"
features = [
    "full",
]

[dependencies.hyper]
version = "1.0.0-rc.3"
features = [
    "full",
]
